--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,43 +1,37 @@
 /* selects the body element */
 body {
+    font-family: 'Ariel';
     font-size: 24px;
 }
 
 h1 {
-    /* using a sans-serif font for headings is popular when mixing different type faces
-        https://www.adobe.com/creativecloud/design/discover/serif-vs-sans-serif.html */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat';
+    font-size: 28px;
 }
 
 a {
-    color:lightblue
+    color: black;
+    text-decoration-line: underline;
 }
 
-/* selects all elements of the wrapper class */
+hr.solid {
+    border-top: 3px solid #bbb;
+}
+
 .wrapper {
-    /* there are some built in colors like lightgray, 
-        or you can use hex codes like #ffffff */
-    background: lightgray;
-
-    /* margin is the external spacing between this element and others */
+    /* background: lightgray; */
     margin: 24px;
-
-    /* padding is the internal spacing of this element */
     padding: 24px;
 }
 
-.salmon {
-    color: salmon;
-}
-
-/* selects the element with id = adjective */
-#adjective {
-    font-family: "Comic Sans MS";
+.center {
+    text-align: center;
+    margin: 24px;
 }
 
 #header {
     color: black;
-    padding: 40px;
+    font-size: 32px;
 }
 
 a:hover {
