--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,19 +14,32 @@ a {
     text-decoration-line: underline;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 hr.solid {
     border-top: 3px solid #bbb;
 }
 
 .wrapper {
-    /* background: lightgray; */
-    margin: 24px;
-    padding: 24px;
+    background: lightgray;
+    margin: 5px;
+    padding: 10px;
 }
 
 .center {
     text-align: center;
-    margin: 24px;
+    padding: 10px 0;
+}
+
+.square {
+    height: 75px;
+    width: 75px;
 }
 
 #header {
