--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,15 +15,13 @@ a {
 }
 
 img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    object-fit: contain;
     max-width: 100%;
     max-height: 100%;
 }
 
 hr.solid {
-    border-top: 3px solid #bbb;
+    border-top: 3px solid #000;
 }
 
 .wrapper {
@@ -38,6 +36,8 @@ hr.solid {
 }
 
 .square {
+    margin-left: auto;
+    margin-right: auto;
     height: 75px;
     width: 75px;
 }
